syntax = 'proto3';

option java_package = "im.actor.server.model";

import "scalapb/scalapb.proto";

message GooglePushCredentials {
    option (scalapb.message).extends = "im.actor.server.model.push.PushCredentials";

    int64 auth_id = 1;
    int64 project_id = 2;
    string reg_id = 3;
}

message ApplePushCredentials {
    option (scalapb.message).extends = "im.actor.server.model.push.PushCredentials";

    int64 auth_id = 1;
    int32 apns_key = 2;
    bytes token = 3;
}
